k8s/04-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pqrs-api
  namespace: pqrs-saas
  labels:
    app: pqrs-api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pqrs-api
  template:
    metadata:
      labels:
        app: pqrs-api
        tier: backend
    spec:
      containers:
        - name: api
          image: pqrs-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "768Mi"
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /index.html
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pqrs-api
  namespace: pqrs-saas
  labels:
    app: pqrs-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: pqrs-api
